[project]
name = "assignment"
version = "0.1.0"
description = ""
authors = [
    {name = "Nandini Barman",email = "nandini.barman780@gmail.com"}
]

[[tool.poetry.packages]]
include = "**/*"
from = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.poetry.dependencies]
python = ">=3.14"
fastapi = ">=0.135.1,<0.136.0"
sqlalchemy = ">=2.0.48,<3.0.0"
uvicorn = ">=0.41.0,<0.42.0"
pytest = ">=9.0.2,<10.0.0"
alembic = ">=1.18.4,<2.0.0"
httpx = ">=0.28.1,<0.29.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
